test gitignore and change base.html for charade

--- a/www/charade/templates/charade/base.html
+++ b/www/charade/templates/charade/base.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <div class="container">
-        <!-- Public Start -->
+        <!-- Header Start -->
         <div class="row">
             <div class="col-md-3">
                 <a href="/">
@@ -52,12 +52,12 @@
                 </pre>
             </div>
         </div>
-        <!-- End of Public -->
-        <!-- Warning Start -->
+        <!-- End of Header -->
+        <!-- Tips Start -->
         <div class="row">
            <h1><p id="warning" class="text-danger text-center"></p></h1>
         </div>
-        <!-- End of Warning -->
+        <!-- End of Tips -->
         <!-- Content Start -->
         {% block content %}{% endblock %}
         <!-- End of Content -->
