add favicon.ico to app: charade

--- a/www/charade/templates/charade/base.html
+++ b/www/charade/templates/charade/base.html
@@ -8,7 +8,7 @@
     <title>{% block title %} base template {% endblock %}</title>
     <meta name="Description" content="">
     <meta name="Keywords" content="">
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="{% static 'charade/images/favicon.ico' %}" type="image/x-icon">
     <script src="{% static 'charade/js/jquery-2.2.0.min.js' %}"></script>
     <script src="{% static 'charade/js/main.js' %}"></script>
     <!-- Bootstrap -->
