--- a/www/charade/templates/charade/ready.html
+++ b/www/charade/templates/charade/ready.html
@@ -4,11 +4,11 @@
         <div class="row text-center">
             <form class="form-inline" role="form" id="setting" action="{% url 'charade:game_set' %}" method="post">
                 <div class="form-group">
-                    Jump to: <a href="{% url 'polls:index' %}">Polls</a>
-                    View: <a href="{% url 'charade:game_board' %}">Score-Board</a>
+                    Jump to: <a href="{% url 'polls:index' %}" title="Have a try?">Polls</a>
+                    View: <a href="{% url 'charade:game_board' %}" title="Login needed">Score-Board</a>
                     {% csrf_token %}
                     <input class="form-control" type="text" id="amount" name="amount" placeholder="number of words" maxlength="3">
-                    <button type="button" class="btn btn-primary" id="ready2go">Go</button>
+                    <button type="button" class="btn btn-primary" id="ready2go">Play</button>
                 </div>
             </form>
         </div>
