The dotted Python path syntax is deprecated and will be removed in django-2.0, so, change www/urls.py, namespacing auth related where base.html used "{% url 'django.contrib.auth.views.logout' %}"

--- a/www/charade/templates/charade/base.html
+++ b/www/charade/templates/charade/base.html
@@ -37,7 +37,7 @@
         <div class="col-md-4">
         {% if user.is_authenticated %}
             <p></p>
-            <a href="{% url 'django.contrib.auth.views.logout' %}" title="logout">Logout</a>
+            <a href="{% url 'auth_logout' %}" title="logout">Logout</a>
             |<strong>
             Welcome, {{ user.username }}
             </strong>
