update deprecated from www/templates/registration/login.html: "{% url 'django.contrib.auth.views.login' %}

--- a/www/templates/registration/login.html
+++ b/www/templates/registration/login.html
@@ -17,7 +17,7 @@
 <div class="row text-center">
 <div class="col-md-4"></div>
 <div class="col-md-4">
-    <form class="form-horizontal" method="post" action="{% url 'django.contrib.auth.views.login' %}">
+    <form class="form-horizontal" method="post" action="{% url 'auth_login' %}">
     {% csrf_token %}
     <div class="form-group">
         <label class="control-label" for="id_username">username:</label>
