use block for js in base.html and related tpls; added ajax howto;

--- a/www/charade/templates/charade/about.html
+++ b/www/charade/templates/charade/about.html
@@ -1,5 +1,5 @@
 {% extends 'charade/base.html' %}
-{% block title %}about{% endblock %}
+{% block titles %}about{% endblock %}
 {% block content %}
     <div class="row text-center">
         TAKE MY HAT OFF to #Fu Tian English Corner# from 2010-2016.
