--- a/www/charade/templates/charade/explanation.html
+++ b/www/charade/templates/charade/explanation.html
@@ -1,5 +1,5 @@
 {% extends 'charade/base.html' %}
-{% block title %}explanation{% endblock %}
+{% block titles %}explanation{% endblock %}
 {% block content %}
 {% if vocabulary %}
     <div class="row text-center">
