--- a/www/charade/templates/charade/board.html
+++ b/www/charade/templates/charade/board.html
@@ -1,5 +1,5 @@
 {% extends 'charade/base.html' %}
-{% block title %}Scores Board{% endblock %}
+{% block titles %}Scores Board{% endblock %}
 {% block content %}
 {% if board %}
 <div class="row text-center">
