--- a/www/charade/templates/charade/base.html
+++ b/www/charade/templates/charade/base.html
@@ -17,6 +17,8 @@
     <!-- Bootstrap Start -->
     <script src="{% static 'charade/js/bootstrap.min.js' %}"></script>
     <link rel="stylesheet" href="{% static 'charade/css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'charade/css/charade-base.css' %}">
+    {% block css4this %}{% endblock %}
     <!-- End of Bootstrap -->
 </head>
 <body>
@@ -25,17 +27,15 @@
 
     <!-- Nav Start -->
     <div class="row">
-        <div class="col-xs-4 col-sm-4">
+        <div class="col-xs-3 col-sm-3">
             <p></p>
             <a href="/">
-                <img class="img-rounded" style="width: 48px; height: 48px;" 
-                    src="{% static 'charade/images/header.jpg' %}" 
-                    alt="Home" title="Back Home? Click me."></img>
+                <img class="img-rounded img-avatar" src="{% static 'charade/images/header.jpg' %}" alt="Home" title="Back Home? Click me."></img>
             </a>
         </div>
-        <div class="col-xs-4 col-sm-4">
+        <div class="col-xs-6 col-sm-6">
         </div>
-        <div class="col-xs-4 col-sm-4">
+        <div class="col-xs-3 col-sm-3">
         {% if user.is_authenticated %}
             <p></p>
             <a href="{% url 'accounts:logout' %}" title="logout">Logout</a>
@@ -49,16 +49,16 @@
 
     <!-- Header Start -->
     <div class="row">
-        <div class="col-xs-2 col-sm-2">
+        <div class="col-xs-3 col-sm-3">
         </div>
-        <div class="col-xs-8 col-sm-8">
+        <div class="col-xs-6 col-sm-6">
             <h3 id="tips" class="text-center">
                 <small id="tips1">English Corner</small>
                 <a href="{% url 'charade:show_about' %}" title="About">'.'</a>
                 <strong id="tips2">Let's charade</strong>
             </h3>
         </div>
-        <div class="col-xs-2 col-sm-2">
+        <div class="col-xs-3 col-sm-3">
         </div>
     </div>
     <div class="row">
