--- a/www/charade/templates/charade/board.html
+++ b/www/charade/templates/charade/board.html
@@ -4,19 +4,15 @@
 {% if board %}
 <div class="row text-center">
     {% if board.has_previous %}
-    <span>
-        <a href="?page={{ board.previous_page_number }}">previous</a>
-    </span>
+    <strong><a href="?page={{ board.previous_page_number }}">previous</a></strong>
     {% endif %}
 
-    <span>
-        Page {{ board.number }} of {{ board.paginator.num_pages }}
-    </span>
+    <em>Page {{ board.number }} of {{ board.paginator.num_pages }}</em>
 
     {% if board.has_next %}
-    <span>
+    <strong>
         <a href="?page={{ board.next_page_number }}">next</a>
-    </span>
+    </strong>
     {% endif %}
 </div>
 <div class="table-responsive">
