--- a/www/charade/templates/charade/ready.html
+++ b/www/charade/templates/charade/ready.html
@@ -5,6 +5,9 @@
     <script src="{% static 'charade/js/charade-ready.js' %}"></script>
 {% endblock %}
 {% block content %}
+    <div class="row">
+       <h3><p id="warning" class="text-danger text-center"></p></h3>
+    </div>
     <div class="row text-center">
         <a href="{% url 'polls:index' %}" title="jump to polls">Polls</a>
         <strong><a href="{% url 'charade:game_board' %}" title="Login needed">Score-Board</a></strong>
