--- a/www/charade/templates/charade/base.html
+++ b/www/charade/templates/charade/base.html
@@ -81,6 +81,7 @@
             </pre>
         </div>
     </div>
+    <p class="p-space"></p>
     <!-- End of Header -->
 
     <!-- Content Start -->
