--- a/www/accounts/templates/accounts/base.html
+++ b/www/accounts/templates/accounts/base.html
@@ -80,6 +80,7 @@
             </pre>
         </div>
     </div>
+    <p class="p-space"></p>
     <!-- End of Header -->
 
     <!-- Content Start -->
