--- a/www/accounts/templates/accounts/base.html
+++ b/www/accounts/templates/accounts/base.html
@@ -1,4 +1,4 @@
-{% load staticfiles %}
+{% load i18n staticfiles %}
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -38,9 +38,9 @@
         <div class="col-xs-3 col-sm-3">
         {% if user.is_authenticated %}
             <p></p>
-            <a href="{% url 'accounts:logout' %}" title="logout">Logout</a>
+            <a href="{% url 'accounts:logout' %}" title="logout">{% trans 'Logout' %}</a>
             |<strong>
-            Welcome, {{ user.username }}
+            {% trans 'Welcome' %}, {{ user.username }}
             </strong>
         {% endif %}
         </div>
@@ -53,31 +53,24 @@
         </div>
         <div class="col-xs-6 col-sm-6">
             <h3 id="tips" class="text-center">
-                <strong id="tips1">Authantication</strong>
-                <strong id="tips2">System</strong>
+                <strong id="tips1">{% trans 'Authantication System' %}</strong>
             </h3>
         </div>
         <div class="col-xs-3 col-sm-3">
         </div>
     </div>
     <div class="row">
+        <div class="col-xs-3 col-sm-3">
+        </div>
         <div class="col-xs-6 col-sm-6">
             <pre id="quote">
     Hi, Chaos!
     Just do it, and do it regularly as a ritual.
-    When we don't appreciate the good, when we take
-    it for granted, the good depreciates.
-                               -- #just remind you#
+    When we don't appreciate the good, when we take it for granted, the good depreciates.
+                  -- #just remind you#
             </pre>
         </div>
-        <div class="col-xs-6 col-sm-6">
-            <pre id="help">
-    [help]:
-        1]. Input the number of words that the Game needs.
-        2]. Explain the word in English to the team members.
-        3]. Say the word directly is not allowed here.
-        4]. Guess the word.
-            </pre>
+        <div class="col-xs-3 col-sm-3">
         </div>
     </div>
     <p class="p-space"></p>
