--- a/www/accounts/templates/accounts/login.html
+++ b/www/accounts/templates/accounts/login.html
@@ -1,13 +1,13 @@
 {% extends "accounts/base.html" %}
 {% load i18n staticfiles %}
-{% block titles %}Login{% endblock %}
+{% block titles %}{% trans 'Login' %}{% endblock %}
 {% block js4this %}
     <script src="{% static 'accounts/js/accounts-login.js' %}"></script>
 {% endblock %}
 {% block content %}
 <div class="row">
-    <div class="col-xs-4 col-sm-4"></div>
-    <div class="col-xs-4 col-sm-4">
+    <div class="col-xs-3 col-sm-3 col-md-4"></div>
+    <div class="col-xs-6 col-sm-6 col-md-4">
         <form class="form-horizontal" method="post" action=".">
             {% csrf_token %}
             {% if form.errors %}
@@ -23,6 +23,6 @@
             </div>
         </form>
     </div>
-    <div class="col-xs-4 col-sm-4"></div>
+    <div class="col-xs-3 col-sm-3 col-md-4"></div>
 </div>
 {% endblock %}
