--- a/www/accounts/templates/accounts/registration_finished.html
+++ b/www/accounts/templates/accounts/registration_finished.html
@@ -1,6 +1,6 @@
 {% extends "accounts/base.html" %}
 {% load i18n %}
-{% block titles %}Registration{% endblock %}
+{% block titles %}{% trans 'Registration' %}{% endblock %}
 {% block content %}
 <div class="row">
     <div class="col-xs-4 col-sm-4"></div>
