--- a/www/accounts/templates/accounts/registration_finished.html
+++ b/www/accounts/templates/accounts/registration_finished.html
@@ -2,11 +2,7 @@
 {% load i18n %}
 {% block titles %}{% trans 'Registration' %}{% endblock %}
 {% block content %}
-<div class="row">
-    <div class="col-xs-4 col-sm-4"></div>
-    <div class="col-xs-4 col-sm-4">
-        <p>{% trans "Registration Applied." %}</p>
-    </div>
-    <div class="col-xs-4 col-sm-4"></div>
+<div class="row text-center">
+    <h3><p class="text-success">{% trans "Registration Applied." %}</p></h3>
 </div>
 {% endblock %}
