--- a/www/charade/templates/charade/play.html
+++ b/www/charade/templates/charade/play.html
@@ -9,8 +9,8 @@
 {% endblock %}
 {% block content %}
 {% if msgs %}
-    <div class="row">
-        <em><h3><p class="text-success text-center"><strong>{{ msgs }}<strong></p></h3></em>
+    <div class="row text-center">
+        <h3><p class="text-success"><strong>{{ msgs }}<strong></p></h3>
     </div>
 {% endif %}
 {% if word_list %}
