--- a/www/accounts/templates/accounts/registration_closed.html
+++ b/www/accounts/templates/accounts/registration_closed.html
@@ -2,12 +2,8 @@
 {% load i18n %}
 {% block titles %}{% trans 'Registration' %}{% endblock %}
 {% block content %}
-<div class="row">
-    <div class="col-xs-4 col-sm-4"></div>
-    <div class="col-xs-4 col-sm-4">
-        <h1>{% trans "Sign Up Closed" %}</h1>
-        <p>{% trans "We are sorry, but the sign up is currently closed." %}</p>
-    </div>
-    <div class="col-xs-4 col-sm-4"></div>
+<div class="row text-center">
+    <h1>{% trans "Sign Up Closed" %}</h1>
+    <p class="text-info">{% trans "We are sorry, but the sign up is currently closed." %}</p>
 </div>
 {% endblock %}
