--- a/www/accounts/templates/accounts/base.html
+++ b/www/accounts/templates/accounts/base.html
@@ -25,19 +25,21 @@
 <!-- Container Start -->
 <div class="container">
 
+    <div class="row">
+        <p></p>
+    </div>
+
     <!-- Nav Start -->
     <div class="row">
         <div class="col-xs-3 col-sm-3">
-            <p></p>
             <a href="/">
-                <img class="img-rounded img-avatar" src="{% static 'accounts/images/header.jpg' %}" alt="Home" title="Back Home? Click me."></img>
+                <img class="img-rounded img-avatar" src="{% static 'accounts/images/avatar.jpg' %}" alt="Home" title="Back Home? Click me."></img>
             </a>
         </div>
         <div class="col-xs-6 col-sm-6">
         </div>
         <div class="col-xs-3 col-sm-3">
         {% if user.is_authenticated %}
-            <p></p>
             <a href="{% url 'accounts:logout' %}" title="logout">{% trans 'Logout' %}</a>
             |<strong>
             {% trans 'Welcome' %}, {{ user.username }}
