--- a/www/charade/templates/charade/board.html
+++ b/www/charade/templates/charade/board.html
@@ -1,30 +1,31 @@
 {% extends 'charade/base.html' %}
+{% load i18n %}
 {% block titles %}Scores Board{% endblock %}
 {% block content %}
 {% if board %}
 <div class="row text-center">
     {% if board.has_previous %}
-    <strong><a href="?page={{ board.previous_page_number }}">previous</a></strong>
+    <strong><a href="?page={{ board.previous_page_number }}">{% trans 'Previous' %}</a></strong>
     {% endif %}
 
     <em>Page {{ board.number }} of {{ board.paginator.num_pages }}</em>
 
     {% if board.has_next %}
     <strong>
-        <a href="?page={{ board.next_page_number }}">next</a>
+        <a href="?page={{ board.next_page_number }}">{% trans 'Next' %}</a>
     </strong>
     {% endif %}
 </div>
 <div class="table-responsive">
     <table class="table table-striped">
-        <caption class="text-center">Score Board</caption>
+        <caption class="text-center">{% trans 'Score Board' %}</caption>
         <thead>
             <tr>
-                <th>team id</th>
-                <th>amount of words</th>
-                <th>scores</th>
-                <th>start</th>
-                <th>end</th>
+                <th>{% trans 'Team id' %}</th>
+                <th>{% trans 'Amount of words' %}</th>
+                <th>{% trans 'Scores' %}</th>
+                <th>{% trans 'Start' %}</th>
+                <th>{% trans 'End' %}</th>
             </tr>
         </thead>
         <tbody>
@@ -42,7 +43,7 @@
 </div>
 {% else %}
 <div class="row">
-    <h1><p class="text-danger text-center">No records available.</p></h1>
+    <h1><p class="text-danger text-center">{% trans 'Not available' %}.</p></h1>
 </div>
 {% endif %}
 {% endblock %}
