--- a/www/charade/templates/charade/play.html
+++ b/www/charade/templates/charade/play.html
@@ -1,6 +1,6 @@
 {% extends 'charade/base.html' %}
-{% load staticfiles %}
-{% block titles %}play{% endblock %}
+{% load i18n staticfiles %}
+{% block titles %}Play{% endblock %}
 {% block js4this %}
     <script src="{% static 'charade/js/charade-play.js' %}"></script>
 {% endblock %}
@@ -19,15 +19,15 @@
         <form action="{% url 'charade:game_score' w.id %}" method="post">
             {% csrf_token %}
             <em>
-                <strong>scores :<strong>
+                <strong>{% trans 'scores' %} :<strong>
                 <label class="radio-inline">
-                    <input type="radio" name="scores" id="choice1" value="1">1 point
+                    <input type="radio" name="scores" id="choice1" value="1">1 {% trans 'point' %}
                 </label>
                 <label class="radio-inline">
-                    <input type="radio" name="scores" id="choice2" value="2" checked>2 points
+                    <input type="radio" name="scores" id="choice2" value="2" checked>2 {% trans 'points' %}
                 </label>
             </em>
-            <button type="submit" class="btn btn-primary">Next</button>
+            <button type="submit" class="btn btn-primary">{% trans 'Next One' %}</button>
         </form>
     </div>
     <div class="row text-center">
@@ -43,12 +43,12 @@
 {% if used_word_list %}
     <div class="table-responsive">
         <table class="table table-striped table-condensed">
-            <caption class="text-center">Review</caption>
+            <caption class="text-center">{% trans 'Review' %}</caption>
             <thead>
                 <tr>
-                    <th>en</th>
-                    <th>zh</th>
-                    <th>scores</th>
+                    <th>{% trans 'English' %}</th>
+                    <th>{% trans 'Chinese' %}</th>
+                    <th>{% trans 'Scores' %}</th>
                 </tr>
             </thead>
             <tbody>
