defined tpltag filter css_class; use css_class in some field to add bootstrap class for page layout.update charade/locale/zh.

--- a/www/accounts/templates/accounts/errors.html
+++ b/www/accounts/templates/accounts/errors.html
@@ -1,5 +1,5 @@
 {% if form.errors and form.non_field_errors %}
-    <div class="form-errors">
+    <div class="form-group form-errors">
         <ul>
             {{ form.non_field_errors|unordered_list }}
         </ul>
