--- a/www/accounts/templates/accounts/login.html
+++ b/www/accounts/templates/accounts/login.html
@@ -8,7 +8,7 @@
 <div class="row">
     <div class="col-xs-2 col-sm-3 col-md-4"></div>
     <div class="col-xs-8 col-sm-6 col-md-4">
-        <form class="form-horizontal" method="post" action=".">
+        <form class="form-horizontal" role="form" method="post" action=".">
             {% csrf_token %}
             {% if form.errors %}
                 {% include "accounts/errors.html" %}
@@ -17,9 +17,11 @@
                 {% include "accounts/fields.html" %}
             {% endfor %}
             <div class="form-group">
-                <input type="hidden" name="next" value="{{ next }}" />
-                <input type="submit" class="btn btn-primary btn-block" value="{% trans 'Login' %}" />
-                <a href="{% url 'accounts:registration' %}" class="btn btn-link btn-block">{% trans 'Create Account' %}</a>
+                <div class="col-sm-offset-4 col-sm-8">
+                    <input type="hidden" name="next" value="{{ next }}" />
+                    <input type="submit" class="btn btn-primary btn-block" value="{% trans 'Login' %}" />
+                    <a href="{% url 'accounts:registration' %}" class="btn btn-link btn-block">{% trans 'Create Account' %}</a>
+                </div>
             </div>
         </form>
     </div>
