--- a/www/accounts/templates/accounts/registration.html
+++ b/www/accounts/templates/accounts/registration.html
@@ -17,7 +17,9 @@
                 {% include "accounts/fields.html" %}
             {% endfor %}
             <div class="form-group">
-                <input type="submit" class="btn btn-primary btn-block" value="{% trans 'Apply' %}" />
+                <div class="col-sm-offset-4 col-sm-8">
+                    <input type="submit" class="btn btn-primary btn-block" value="{% trans 'Apply' %}" />
+                </div>
             </div>
         </form>
     </div>
