--- a/www/accounts/templates/accounts/fields.html
+++ b/www/accounts/templates/accounts/fields.html
@@ -22,9 +22,11 @@
             </div>
             {% if field.errors %}
             <div class="form-group">
-                <ul class="ul-errorlist">
-                    {{ field.errors|unordered_list }}
-                </ul>
+                <div class="col-sm-offset-4 col-sm-8">
+                    <ul class="ul-errorlist">
+                        {{ field.errors|unordered_list }}
+                    </ul>
+                </div>
             </div>
             {% endif %}
             {% if field|is_checkbox %}
