--- a/www/accounts/templates/accounts/base.html
+++ b/www/accounts/templates/accounts/base.html
@@ -39,12 +39,12 @@
         <div class="col-xs-6 col-sm-6">
         </div>
         <div class="col-xs-3 col-sm-3">
-        {% if user.is_authenticated %}
-            <a href="{% url 'accounts:logout' %}" title="logout">{% trans 'Logout' %}</a>
-            |<strong>
-            {% trans 'Welcome' %}, {{ user.username }}
+            {% if user.is_authenticated %}
+            <a href="{% url 'accounts:logout' %}" title="logout">{% trans 'Logout' %}</a>|
+            <strong>
+                {% trans 'Welcome' %}, {{ user.username }}
             </strong>
-        {% endif %}
+            {% endif %}
         </div>
     </div>
     <!-- End of Nav -->
@@ -62,12 +62,12 @@
         </div>
     </div>
     <div class="row">
-            <pre id="quote">
-    Hi, Chaos!
-    Just do it, and do it regularly as a ritual.
-    When we don't appreciate the good, when we take it for granted, the good depreciates.
-                  -- #just remind you#
-            </pre>
+        <pre id="quote">
+Hi, Chaos!
+Just do it, and do it regularly as a ritual.
+When we don't appreciate the good, when we take it for granted, the good depreciates.
+            -- #just remind you#
+        </pre>
     </div>
     <p class="p-space"></p>
     <!-- End of Header -->
